--- a/slider.css
+++ b/slider.css
@@ -1,14 +1,6 @@
 /*
- * Ajax Slider v.0.1
- *
- * Author Eriks Briedis
- * http://eriks.designschemers.com
- * @eriks_b
- *
- * Copyright 2013, Eriks Briedis
- * License: GNU General Public License, version 3 (GPL-3.0)
- * http://www.opensource.org/licenses/gpl-3.0.html
- *
+ * ASlider
+ * Main styles
  */
 
  .aslider {
@@ -20,16 +12,19 @@
  }
  .aslider li {
  	position: absolute;
+ 	width: 100%;
+ 	height: 100%;
  }
  .aslider li img { max-width: 100%; height: auto; }
  .slide-controls {
  	background: url(img/arrows.png) no-repeat 0 0;
  	opacity: .5;
- 	width: 64px;
- 	height: 100px;
- 	margin-top: -50px;
+ 	width: 38px;
+ 	height: 60px;
+ 	margin-top: -30px;
  	position: absolute;
  	z-index: 100;
+ 	cursor: pointer;
  }
  .slide-controls:hover {
  	opacity: 1;
@@ -39,7 +34,26 @@
  	top: 50%;
  }
  .slide-right {
- 	background-position: -64px 0;
+ 	background-position: -38px 0;
  	right: 0;
  	top: 50%;
+ }
+ #aslider-ctrls{
+ 	position: absolute;
+ 	bottom: 10px;
+ 	right: 0;
+ }
+ #aslider-ctrls .ctrl-btn {
+ 	float: left;
+ 	display: block;
+ 	width: 10px;
+ 	height: 10px;
+ 	background: #fff;
+ 	border: 1px solid #000;
+ 	border-radius: 10px;
+ 	margin-right: 10px;
+ 	cursor: pointer;
+ }
+ .ctrl-active {
+ 	background: #2980b9 !important;
  }
