--- a/slider.css
+++ b/slider.css
@@ -15,7 +15,7 @@
  	width: 100%;
  	height: 100%;
  }
- .aslider li img { max-width: 100%; height: auto; }
+ .aslider li img { width: 100%; height: auto; }
  .slide-controls {
  	background: url(img/arrows.png) no-repeat 0 0;
  	opacity: .5;
@@ -46,14 +46,12 @@
  #aslider-ctrls .ctrl-btn {
  	float: left;
  	display: block;
- 	width: 10px;
- 	height: 10px;
- 	background: #fff;
- 	border: 1px solid #000;
- 	border-radius: 10px;
- 	margin-right: 10px;
+ 	width: 15px;
+ 	height: 15px;
+ 	background: url(img/btn.png) no-repeat 0 0;
  	cursor: pointer;
+ 	margin-right: 5px;
  }
  .ctrl-active {
- 	background: #2980b9 !important;
+ 	background-position: -15px 0 !important;
  }
